[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "briefer"
version = "0.0.9"
description = "Python notebooks and dashboards in a single place. Create powerful and flexible dashboards using code, or build beautiful Notion-like notebooks and share them with your team."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = ["docker"]

[project.urls]
Homepage = "https://briefer.cloud"
Documentation = "https://github.com/briefercloud/briefer/README.md"
Repository = "https://github.com/briefercloud/briefer"

[project.scripts]
briefer = "briefer.main:main"

